add delete endpoint

--- a/devsoftware/src/app/app.component.html
+++ b/devsoftware/src/app/app.component.html
@@ -1,50 +1,54 @@
 <router-outlet />
 
 <div class="container">
-    <h2>Cadastro de Usuário</h2>
+  <h2>Cadastro de Usuário</h2>
 
-    <div>
-        <label for="password">Nome:</label>
-        <input type="text" id="hero-name" [(ngModel)]="user.name">
+  <div>
+    <label for="password">Nome:</label>
+    <input type="text" id="hero-name" [(ngModel)]="user.name">
 
-    </div>
+  </div>
 
-    <div>
-        <label for="password">Email:</label>
-        <input type="text" id="hero-name" [(ngModel)]="user.email">
+  <div>
+    <label for="password">Email:</label>
+    <input type="text" id="hero-name" [(ngModel)]="user.email">
 
 
-    </div>
+  </div>
 
-    <div>
-        <label for="password">Senha:</label>
-        <input type="text" id="hero-name" [(ngModel)]="user.password">
+  <div>
+    <label for="password">Senha:</label>
+    <input type="text" id="hero-name" [(ngModel)]="user.password">
 
-    </div>
-
+  </div>
+  <div >
     <button (click)="save()">Save</button>
     <button (click)="clear()">Clear</button>
 
+  </div>
 </div>
 
 <div class="container">
-    <h2>Lista de Usuários</h2>
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Nome</th>
-          <th>Email</th>
-          <th>Editar</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let u of users; let i = index">
-       
-          <td>{{ u.name }}</td> 
-          <td>{{ u.email }}</td>
-          <td><button (click)="edit(i)">Edit</button></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <h2>Lista de Usuários</h2>
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Nome</th>
+        <th>Email</th>
+        <th>Editar</th>
+        <th>Excluir</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let u of users; let i = index">
+
+        <td>{{ u.id }}</td>
+        <td>{{ u.name }}</td>
+        <td>{{ u.email }}</td>
+        <td><button (click)="edit(i)">Edit</button></td>
+        <td><button (click)="remove(u.id)">X</button></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
